fixed whitespace under the body when viewed on mobile

--- a/src/app/components/app.less
+++ b/src/app/components/app.less
@@ -99,8 +99,6 @@ li a:hover, li a:active {
 	display: flex;
 	flex-grow: 1;
 	font-weight: 600;
-	margin: 0 auto;
-	overflow: hidden;
 }
 #footer ul{
 	display: flex;
